# eLarcProfPy

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  LarcNewCloudSchéma.sql  ListeTablesSqlite.xlsx  README.md  Table_a_garder_pour_Sqlite.docx  algorithme_creation_instance_cloud.md  algorithme_creation_instance_intranet.md  check_criteria2.py  check_db.py  check_db_data.py  check_db_data2.py  check_db_schema.py  check_labels.py  elarc.db-shm  elarc.db-wal  export_to_sqlite.py  historique_demandes.txt  main.py  opencode.json  pyproject.toml  requirements.txt  reset_pwd.py  tableConvert.md
LarcCloudSync/: 00_INDEX.md  Troubleshouting.md  config.json  requirements.txt
common/: auth.py  database.py  grid_config.py  logger.py  network.py  session.py  sqlite_init.py  sync.py  theme.py
deepseek/: PROJECT_SNAPSHOT.md  key_locations.md  key_queries.sql  schema_elarc_db.txt
docs/: 01_introduction.md  02_point_entree_main.md  03_fenetre_connexion.md  04_detection_reseau.md  05_connexion_intranet.md  06_connexion_cloud.md  07_authentification_intranet.md  08_authentification_cloud_oauth2.md  09_authentification_pin.md  10_creation_instance_locale.md  11_export_sqlite.md  12_gestion_session.md  13_ouverture_fenetre_principale.md  14_changement_password_pin.md  15_logger.md  16_main_window.md  17_pei_dp_separation.md  18_tableau_de_bord_prof.md  19_evaluation_panel.md  20_eval_manager.md  README.md  etat_projet.md  historique_construction.md
grid_configs/: pei.json
views/: eval_manager.py  evaluation_panel.py  filter_bar.py  home_window.py  login.py  main_window.py  (+1 more)
(+18 files in other folders)
